[package]
name = "password-generator"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Daniel Ostermann <dostermann912@gmail.com>"]
edition = "2021"
repository = "https://github.com/dostermann/password-generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
